<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:weightSum="2"
        android:padding="2dp"
        android:layout_margin="10dp"
        android:orientation="vertical">
        <TextView
            android:id="@+id/productID"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.5"
            android:minHeight="48dp"
            android:text="@string/product_id"
            android:textColor="@color/purple_500"
            android:textSize="22sp"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/productName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:layout_weight="0.5"
            android:minHeight="48dp"
            android:text="@string/product_name"
            android:textColor="@color/purple_500"
            android:textSize="22sp"
            android:textStyle="bold" />




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="5dp"
            android:orientation="horizontal"
            android:padding="2dp"
            android:weightSum="4">
            <Button
                android:id="@+id/minusBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:clickable="false"
                android:text="@string/Minus" />

            <TextView
                android:id="@+id/stockQty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="0.25"
                android:ems="6"
                android:inputType="number"
                android:minHeight="50dp"
                android:paddingLeft="50dp"
                android:paddingRight="50dp"
                android:text="@string/product_qty"
                android:textColor="#673AB7"
                android:textSize="35dp" />


            <Button
                android:id="@+id/addBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:clickable="false"
                android:text="@string/Add" />

            <Button
                android:id="@+id/saveBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="0.5"
                android:clickable="false"
                android:text="@string/Save" />
        </LinearLayout>

    </LinearLayout>


</LinearLayout>