<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="visible"
            tools:context=".MainScreenActivity">

            <com.smarteist.autoimageslider.SliderView
                android:id="@+id/slider"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:sliderAnimationDuration="600"
                app:sliderAutoCycleDirection="back_and_forth"
                app:sliderIndicatorAnimationDuration="600"
                app:sliderIndicatorGravity="center_horizontal|bottom"
                app:sliderIndicatorOrientation="horizontal"
                app:sliderIndicatorSelectedColor="#5A5A5A"
                app:sliderIndicatorUnselectedColor="#FFF"
                app:sliderScrollTimeInSec="1"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/appmainbutton"
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:text="@string/main_button"
                app:backgroundTint="@color/purple_500"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/slider"
                app:layout_constraintStart_toStartOf="@+id/slider"
                app:layout_constraintTop_toTopOf="@+id/slider"
                app:layout_constraintVertical_bias="0.87"
                tools:ignore="MissingConstraints">

            </com.google.android.material.button.MaterialButton>

            <TextView
                android:id="@+id/myText"
                android:layout_width="555dp"
                android:layout_height="133dp"
                android:layout_marginStart="200dp"
                android:layout_marginTop="180dp"
                android:layout_marginEnd="120dp"
                android:text="@string/mainscreenname"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textSize="64sp"
                android:textStyle="bold"
                android:typeface="monospace"
                android:visibility="visible"
                app:layout_constraintEnd_toStartOf="@+id/fillmenubutton"
                app:layout_constraintHorizontal_bias="0.582"
                app:layout_constraintStart_toEndOf="@+id/exitbutton"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/fillmenubutton"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:text="@string/fill_menu_button"
                android:textColor="#000000"
                android:visibility="invisible"
                app:backgroundTint="@color/teal_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.968"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints,TextContrastCheck">

            </com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/exitbutton"
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginStart="10dp"
                android:text="@string/exit_button"
                android:textColor="#000000"
                android:visibility="invisible"
                app:backgroundTint="@color/teal_200"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="MissingConstraints,TextContrastCheck">

            </com.google.android.material.button.MaterialButton>




        </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>